fix readOne